--- a/index.html
+++ b/index.html
@@ -3,10 +3,29 @@
 
 <head>
     <meta charset="UTF-8">
+    
+    <!-- HTML Meta Tags -->
+    <title>SignalRGB WLED Matrix Pixel Art Painter</title>
+    <meta name="description" content="Create and share pixel art to display in your WLED matrix panel">
+
+    <!-- Facebook Meta Tags -->
+    <meta property="og:url" content="https://pixelart.nolliergb.com/">
+    <meta property="og:type" content="website">
+    <meta property="og:title" content="SignalRGB WLED Matrix Pixel Art Painter">
+    <meta property="og:description" content="Create and share pixel art to display in your WLED matrix panel">
+    <meta property="og:image" content="https://opengraph.b-cdn.net/production/images/19a88f0d-6a46-4ce0-b2c2-56e649fca0d7.png?token=xfks4HTCdYJ8lRQtaMES4lihA88vgUixnokxC2CdQrc&height=288&width=512&expires=33284996764">
+
+    <!-- Twitter Meta Tags -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta property="twitter:domain" content="https://pixelart.nolliergb.com/">
+    <meta property="twitter:url" content="https://pixelart.nolliergb.com/">
+    <meta name="twitter:title" content="SignalRGB WLED Matrix Pixel Art Painter">
+    <meta name="twitter:description" content="Create and share pixel art to display in your WLED matrix panel">
+    <meta name="twitter:image" content="https://opengraph.b-cdn.net/production/images/19a88f0d-6a46-4ce0-b2c2-56e649fca0d7.png?token=xfks4HTCdYJ8lRQtaMES4lihA88vgUixnokxC2CdQrc&height=288&width=512&expires=33284996764">
+    
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <title>SignalRGB WLED Matrix Pixel Art Painter</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css" />
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
