Fix bug in clear shortcut function

--- a/index.html
+++ b/index.html
@@ -2109,7 +2109,7 @@
                 return;
             } else if (e.key === 'c') {
                 // Clear
-                clearAll()
+                clearAll(colorMap.black)
                 return;
             } else if ((e.ctrlKey || e.metaKey) && e.key === 'i') {
                 // Invert Translucents
